Fixed carousel alignment (grid-area + child width)

--- a/src/film-database/components/carousel/_fdCarousel.scss
+++ b/src/film-database/components/carousel/_fdCarousel.scss
@@ -28,9 +28,12 @@
   &__wrapper {
     position: relative;
     display: grid;
+    grid-template-areas: 'left right';
+    grid-template-columns: repeat(2, calc(var(--fd-padding-generic) - var(--fd-gap-mediaPoster)));
+    grid-template-rows: 1fr;
+    justify-content: space-between;
     overflow: clip;
     &__ul {
-      gap: var(--fd-gap-mediaPoster);
       padding: var(--fd-padding-innerWrapper);
       &[data-status='carousel'] {
         display: flex;
@@ -49,38 +52,40 @@
       //   justify-content: center;
       // }
       &__li {
+        width: calc(var(--fd-carousel-featured-height) * 0.66667);
+        aspect-ratio: 2/3;
+        margin-right: var(--fd-gap-mediaPoster);
         overflow: clip;
-        &[data-status='carousel'] {
-          height: calc(
-            ((100svw - 2 * var(--fd-gap-mediaPoster) - (var(--fd-carousel-items-per-page) - 0.5) * var(--fd-gap-mediaPoster)) / var(--fd-carousel-items-per-page)) /
-              0.66667
-          );
-          aspect-ratio: 2/3;
-          @media (width <= 1250px) {
-            height: calc(
-              (
-                  (100svw - 2 * var(--fd-gap-mediaPoster) - (var(--fd-carousel-items-per-page) - 0.5) * var(--fd-gap-mediaPoster)) /
-                    calc(var(--fd-carousel-items-per-page) - 2)
-                ) / 0.66667
-            );
-          }
-          @media (width <= 950px) {
-            height: calc(
-              (
-                  (100svw - 2 * var(--fd-gap-mediaPoster) - (var(--fd-carousel-items-per-page) - 0.5) * var(--fd-gap-mediaPoster)) /
-                    calc(var(--fd-carousel-items-per-page) - 4)
-                ) / 0.66667
-            );
-          }
-          @media (width <= 650px) {
-            height: calc(
-              (
-                  (100svw - 2 * var(--fd-gap-mediaPoster) - (var(--fd-carousel-items-per-page) - 0.5) * var(--fd-gap-mediaPoster)) /
-                    calc(var(--fd-carousel-items-per-page) - 5)
-                ) / 0.66667
-            );
-          }
-        }
+        // &[data-status='carousel'] {
+        //   height: calc(
+        //     ((100svw - 2 * var(--fd-gap-mediaPoster) - var(--fd-carousel-items-per-page) * var(--fd-gap-mediaPoster)) / var(--fd-carousel-items-per-page)) / 0.66667
+        //   );
+
+        //   @media (width <= 1250px) {
+        //     height: calc(
+        //       (
+        //           (100svw - 2 * var(--fd-gap-mediaPoster) - (var(--fd-carousel-items-per-page) - 0.5) * var(--fd-gap-mediaPoster)) /
+        //             calc(var(--fd-carousel-items-per-page) - 2)
+        //         ) / 0.66667
+        //     );
+        //   }
+        //   @media (width <= 950px) {
+        //     height: calc(
+        //       (
+        //           (100svw - 2 * var(--fd-gap-mediaPoster) - (var(--fd-carousel-items-per-page) - 0.5) * var(--fd-gap-mediaPoster)) /
+        //             calc(var(--fd-carousel-items-per-page) - 4)
+        //         ) / 0.66667
+        //     );
+        //   }
+        //   @media (width <= 650px) {
+        //     height: calc(
+        //       (
+        //           (100svw - 2 * var(--fd-gap-mediaPoster) - (var(--fd-carousel-items-per-page) - 0.5) * var(--fd-gap-mediaPoster)) /
+        //             calc(var(--fd-carousel-items-per-page) - 5)
+        //         ) / 0.66667
+        //     );
+        //   }
+        // }
         // &[data-status='grid'] {
         //   height: calc(
         //     ((100svw - 2 * var(--fd-gap-mediaPoster) - (var(--fd-flat-grid-items-per-page) - 0.5) * var(--fd-gap-mediaPoster)) / var(--fd-flat-grid-items-per-page)) /
@@ -133,6 +138,8 @@
       position: absolute;
       top: 0;
       left: 0;
+      display: flex;
+      align-items: center;
       width: 100%;
       height: 100%;
       pointer-events: none;
@@ -140,9 +147,8 @@
       &--button {
         position: absolute;
         z-index: 5;
-        width: calc(((100% + var(--fd-padding-generic)) / var(--fd-carousel-items-per-page) - var(--fd-gap-mediaPoster)) / 3.1);
-        height: 100%;
-        background-color: hsla(217, 100%, 3%, 0.5);
+        height: 50%;
+        background-color: hsla(216, 100%, 3%, 0.5);
         pointer-events: all;
         & svg {
           width: 3em;
